création du filter

--- a/src/main/webapp/template/left_menu.xhtml
+++ b/src/main/webapp/template/left_menu.xhtml
@@ -14,7 +14,7 @@
             <div id="left_menu">
                 <ul class="nav nav-pills nav-stacked">
                     <li class="active"><a href="#">Partager une image</a></li>
-                    <li><a href="#">Mes images</a></li>
+                    <li><a href="images.xhtml">Mes images</a></li>
                     <li><a href="#">Mes albums</a></li>
                     <li><a href="#">Créer un album</a></li>
                 </ul> 
