--- a/src/main/webapp/resources/css/acountStyle.css
+++ b/src/main/webapp/resources/css/acountStyle.css
@@ -40,7 +40,7 @@ img{
 
 .bodi .block {
     border-radius: 5px 5px 5px 5px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255,1);
     margin-bottom: 10px;
     padding-top: 10px;
     padding-left: 10px;
@@ -50,7 +50,7 @@ img{
 }
 
 .bodi #left{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 5px 5px 5px 5px;
     color: white;
     border: solid 1px;
